출력에 feature size 추가 및 실행 카운트 업데이트

--- a/why.ipynb
+++ b/why.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +283,7 @@
      "output_type": "stream",
      "text": [
       "File not found: models/weights/edsr_baseline_x2-1bc95232.pt\n",
+      "feature size: torch.Size([1, 64, 64, 64])\n",
       "torch.Size([1, 2304, 3])\n"
      ]
     },
@@ -506,6 +507,7 @@
     "            torch.Tensor: The output features after Gaussian splatting, of the same shape as the input.\n",
     "        \"\"\"\n",
     "        # 1. Get LR feature and logits\n",
+    "        print('feature size:', self.feat.shape)\n",
     "        feat, lr_feat, logits = self.feat[:, :8, :, :], self.feat[:, 8:, :, :], self.logits  # Channel decoupling\n",
     "        feat_size, feat_device = feat.shape, feat.device\n",
     "\n",
